--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "chart.js": "^2.9.4",
     "ng2-currency-mask": "^12.0.3",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
